--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/index.html
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/index.html
@@ -5,7 +5,7 @@
     <title>SummitSsnFrontend</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/jpg" href="assets/images/Summit_favicon.jpg">
   </head>
   <body id="app--container">
     <app-root></app-root>
