--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/index.html
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>SummitSsnFrontend</title>
+    <title>100 Web Injection</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="assets/images/Summit_favicon.jpg">
